--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,12 @@ android {
         exclude 'META-INF/XXXX'
         exclude 'META-INF/XXXX'
 
-
+        exclude 'lib/x86/libZBarDecoder.so'
+        exclude 'lib/armeabi-v7a/libZBarDecoder.so'
+        exclude 'lib/mips/libZBarDecoder.so'
+        exclude 'lib/armeabi/libZBarDecoder.so'
+        exclude 'project.properties'
+        exclude 'com.dtr.zbar.build.ZBarDecoder'
     }
     defaultConfig {
         ndk {
@@ -80,4 +85,5 @@ dependencies {
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.75'
 
     implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'org.jetbrains:annotations:15.0'
 }
