--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,13 +77,25 @@ dependencies {
     implementation 'junit:junit:4.12'
 //    implementation 'org.junit.jupiter:junit-jupiter-api'
 //    testImplementation 'junit:junit:4.12'
-
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.14.2'
     implementation 'androidx.appcompat:appcompat:1.0.2'
 //    implementation 'com.android.support:appcompat-v7:28.0.0'
     // https://mvnrepository.com/artifact/com.alibaba/fastjson
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.75'
-
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'org.jetbrains:annotations:15.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //    rxjava
+    api 'io.reactivex.rxjava2:rxjava:2.1.9'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
+    //    retrofit2
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:converter-gson:2.3.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    api 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 }
