--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@drawable/radar"
         android:label="@string/app_name"
@@ -42,10 +45,10 @@
             android:screenOrientation="landscape"
             android:theme="@style/MySettingActivity"></activity>
         <activity
-            android:name="com.example.UpLoad.SelectPicActivity"
+            android:name="com.example.upload.SelectPicActivity"
             android:screenOrientation="landscape"
             android:theme="@style/DialogStyleBottom" />
-        <activity android:name="com.example.UpLoad.UploadImageActivity" />
+        <activity android:name="com.example.upload.UploadImageActivity" />
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -56,7 +59,7 @@
             android:screenOrientation="fullSensor"
             android:theme="@style/scanzbar" />
         <activity
-            android:name="com.example.UpLoad.MyDialogActivity"
+            android:name="com.example.upload.MyDialogActivity"
             android:theme="@style/share_activity_styles" />
         <activity
             android:name="com.example.BackRadar.MainActivity"
@@ -80,7 +83,7 @@
             android:label="@string/title_activity_my_file_manager"
             android:theme="@android:style/Theme.Dialog" />
         <activity
-            android:name="com.example.UpLoad.FileListMyDialogManager"
+            android:name="com.example.upload.FileListMyDialogManager"
             android:label="@string/title_activity_my_file_manager"
             android:theme="@android:style/Theme.Dialog" />
         <activity
