--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         jcenter()
     }
 }
+tasks.withType(JavaCompile) { options.encoding = "UTF-8" }
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
