--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
+        android:name="com.example.SampleApplication"
         android:hardwareAccelerated="false"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -90,6 +91,9 @@
             android:name=".NoneActivity"
             android:label="@string/title_activity_none"
             android:screenOrientation="landscape" />
+        <service
+            android:name="com.example.tinker.SampleResultService"
+            android:exported="false"/>
     </application>
 
 </manifest>
