--- a/config.gradle
+++ b/config.gradle
@@ -1,5 +1,5 @@
 ext{
-    isRealead = true
+    isRealead = false
     url = [
             debugUrl : "\"http://192.168.3.117:8013/\"",
             release : "\"http://39.105.125.51:8013/\""
